--- a/server/build.gradle
+++ b/server/build.gradle
@@ -52,5 +52,15 @@ dependencies {
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
     compile group: 'com.amazonaws', name: 'aws-iot-device-sdk-java', version: '1.1.1'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    compile 'mysql:mysql-connector-java:5.1.37'
+    compile group: 'org.apache.derby', name: 'derby', version: '10.5.3.0'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    // https://mvnrepository.com/artifact/org.apache.derby/derbyclient
+    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.14.1.0'
+
+
+
 
 }
