--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,4 +11,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.amazonaws', name: 'aws-iot-device-sdk-java', version: '1.1.1'
+
 }
