--- a/server/build.gradle
+++ b/server/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     compile group: 'io.swagger', name: 'swagger-jaxrs', version: '1.5.16'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
-
+    compile 'com.amazonaws:aws-java-sdk-core:1.11.221'
+    compile 'com.amazonaws:aws-java-sdk-iot:1.11.221'
 
 
 
