--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # From https://github.com/github/gitignore/blob/master/Gradle.gitignore
 .gradle
 /build/
-
+./server/build/
 # Ignore Gradle GUI config
 gradle-app.setting
 
