--- a/server/build.gradle
+++ b/server/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
-    compile group: 'io.swagger', name: 'swagger-jaxrs', version: '1.5.16'
+    // https://mvnrepository.com/artifact/io.swagger/swagger-jersey2-jaxrs
+    compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.17'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     compile 'com.amazonaws:aws-java-sdk-core:1.11.221'
