--- a/server/build.gradle
+++ b/server/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     compile 'com.amazonaws:aws-java-sdk-core:1.11.221'
     compile 'com.amazonaws:aws-java-sdk-iot:1.11.221'
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-events
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-events', version: '1.11.238'
+
 
 
 
