--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,6 +43,8 @@ jar {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.glassfish.jersey', name: 'jersey-bom', version: '2.26' //, ext: 'pom'
+    // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-servlet
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-servlet', version: '2.0-m07-1'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '2.26'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
@@ -66,6 +68,8 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-java-sdk-events', version: '1.11.238'
     // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda
     compile group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.240'
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sns
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.292'
     //hibernate-c3p0 connection pooling
     compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '5.2.12.Final'
     //c3p0
