--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,14 +42,16 @@ jar {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'org.glassfish.jersey', name: 'jersey-bom', version: '2.26' //, ext: 'pom'
+    compile group: 'org.glassfish.jersey', name: 'jersey-bom', version: '2.27' //, ext: 'pom'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-servlet
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-servlet', version: '2.0-m07-1'
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '2.26'
-    compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-servlet', version: '2.27'
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '2.27'
+    // https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2
+    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.27'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
+    // hibernate validator annotation processor find errors on constraints at build time e.g. @Date constraint on a string
     compile group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: '6.0.3.Final'
-    compile group: 'org.glassfish.jersey.ext', name: 'jersey-mvc-freemarker', version: '2.26'
+    compile group: 'org.glassfish.jersey.ext', name: 'jersey-mvc-freemarker', version: '2.27'
     compile group: 'org.glassfish.web', name: 'javax.el', version: '2.2.6'
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
     compile group: 'com.amazonaws', name: 'aws-iot-device-sdk-java', version: '1.1.1'
@@ -59,9 +61,9 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
     // https://mvnrepository.com/artifact/io.swagger/swagger-jersey2-jaxrs
-    compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.17'
+    compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.19'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
-    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.27'
     compile 'com.amazonaws:aws-java-sdk-core:1.11.271'
     compile 'com.amazonaws:aws-java-sdk-iot:1.11.271'
     // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-events
@@ -78,6 +80,4 @@ dependencies {
     compile group: 'c3p0', name: 'c3p0', version: '0.9.1.2'
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.9.Final'
-    // https://mvnrepository.com/artifact/javax.el/javax.el-api
-    compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
 }
