--- a/server/build.gradle
+++ b/server/build.gradle
@@ -56,7 +56,9 @@ dependencies {
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
     compile group: 'com.amazonaws', name: 'aws-iot-device-sdk-java', version: '1.1.1'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-    compile 'mysql:mysql-connector-java:5.1.37'
+//    compile 'mysql:mysql-connector-java:5.1.37'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
