--- a/server/build.gradle
+++ b/server/build.gradle
@@ -44,7 +44,6 @@ dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-
     compile group: 'org.glassfish.jersey', name: 'jersey-bom', version: '2.27' //, ext: 'pom'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-servlet
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-servlet', version: '2.27'
@@ -85,4 +84,7 @@ dependencies {
     compile group: 'c3p0', name: 'c3p0', version: '0.9.1.2'
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.9.Final'
+
+    // https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j
+    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 }
